--- a/dewi/templates/kategori.html
+++ b/dewi/templates/kategori.html
@@ -66,9 +66,8 @@
                                                 <div class="add-actions">
                                                     <ul class="add-actions-link">
                                                         <li class="add-cart active"><a href="{% url 'produk' row.kategori.slug row.slug %}">Detail Barang</a></li>
-                                                        <li><a href="#" title="quick view" class="quick-view-btn" data-toggle="modal" datatarget="#exampleModalCenter{{row.id}}"><i class="fa fa-eye"></i></a></li>
-                                                        <li><a class="linksdetails" href="https://api.whatsapp.com/send?phone={{row.no_whatsApp}}&text=Saya%20ingin%2
-                                                        0pemesan%20product%20{{row.nama_produk}}%20apakah%20tersedia%20?%20" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
+                                                        <li><a href="#" title="quick view" class="quick-view-btn" data-toggle="modal" data-target="#exampleModalCenter{{row.id}}"><i class="fa fa-eye"></i></a></li>
+                                                        <li><a class="linksdetails" href="https://api.whatsapp.com/send?phone={{row.no_whatsApp}}&text=Saya%20ingin%20pemesan%20product%20{{row.nama_produk}}%20apakah%20tersedia%20?%20" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
                                                             
                                                     </ul>
                                                 </div>
