--- a/dewi/templates/kontak.html
+++ b/dewi/templates/kontak.html
@@ -67,6 +67,7 @@
                                 <label>Pesan <span class="required">*</span></label>
                                 <textarea name="pesan">{{data.pesan}}</textarea>
                                 <div class="g-recaptcha" data-sitekey="6LeqvkIpAAAAAOKsPd8Dxggf97YnTcPFBJ-7Kuh_"></div>
+                            </div>
                             <div class="form-group"> 
                                 <input type="submit" class="li-btn-3" value="Kirim">
                            </div>
