--- a/dewi/templates/cari.html
+++ b/dewi/templates/cari.html
@@ -68,7 +68,7 @@
                                                 <div class="add-actions">
                                                     <ul class="add-actions-link">
                                                         <li class="add-cart active"><a href="{% url 'produk' cari.kategori.slug cari.slug %}">Detail Barang</a></li>
-                                                        <li><a href="#" title="quick view" class="quick-view-btn" data-toggle="modal" datatarget="#exampleModalCenter{{cari.id}}"><i class="fa fa-eye"></i></a></li>
+                                                        <li><a href="#" title="quick view" class="quick-view-btn" data-toggle="modal" data-target="#exampleModalCenter{{cari.id}}"><i class="fa fa-eye"></i></a></li>
                                                         <li><a class="linksdetails" href="https://api.whatsapp.com/send?phone={{cari.no_whatsApp}}&text=Saya%20ingin%2
                                                         0pemesan%20product%20{{cari.nama_produk}}%20apakah%20tersedia%20?%20" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
                                                             
