--- a/dewi/templates/produk.html
+++ b/dewi/templates/produk.html
@@ -125,7 +125,7 @@
                                         <div class="inc qtybutton"><i class="fa fa-angle-up"></i></div>
                                     </div>
                                 </div>
-                                {{ cart_product_form }}
+                                {{ susanti_product_form }}
                                 <button class="add-to-cart" type="submit">Tambah cart</button>
                             </form>
                         </div>
