--- a/susanti/templates/pemesanan.html
+++ b/susanti/templates/pemesanan.html
@@ -74,7 +74,7 @@
                         <div class="cart-page-total">
                             <h2>Total Cart</h2>
                             <ul>
-                                <li>Total <span>Rp. {{ cart.get_total_price|intcomma }}</span></li>
+                                <li>Total <span>Rp. {{ susanti.get_total_price|intcomma }}</span></li>
                             </ul>
                             <a href="{% url 'checkout' %}">Checkout</a>
                         </div>
