--- a/templates/base.html
+++ b/templates/base.html
@@ -258,10 +258,9 @@
                                     <div class="footer-block">
                                         <h3 class="footer-block-title">Produk</h3>
                                         <ul>
-                                            <li><a href="#">Olahan Minuman</a></li>
-                                            <li><a href="#">Burger Sayur</a></li>
-                                            <li><a href="#">Donat Asli</a></li>
-                                            <li><a href="#">Kripik Desa</a></li>
+                                            <li><a href="#">Minuman</a></li>
+                                            <li><a href="#">Makanan</a></li>
+                                            
                                         </ul>
                                     </div>
                                 </div>
@@ -443,7 +442,7 @@
                                                                 <div class="dec qtybutton"><i class="fa fa-angle-down"></i></div>
                                                                 <div class="inc qtybutton"><i class="fa fa-angle-up"></i></div></div>
                                                             </div>
-                                                            {{ cart_product_form}}
+                                                            {{ susanti_product_form}}
                                                             <button class="add-to-cart" type="submit">Tambah cart</button>
                                                             </div> 
                                                 </form>
